FIX: Use green links color to fix invisible ink

--- a/sass/base/_theme.scss
+++ b/sass/base/_theme.scss
@@ -2,10 +2,10 @@ $noise-bg: image-url('noise.png') top left !default;
 $img-border: inline-image('dotted-border.png');
 
 // Main Link Colors
-$link-color: lighten(#165b94, 3) !default;
-$link-color-hover: adjust-color($link-color, $lightness: 10, $saturation: 25) !default;
-$link-color-visited: adjust-color($link-color, $hue: 80, $lightness: -4) !default;
-$link-color-active: adjust-color($link-color-hover, $lightness: -15) !default;
+$link-color: #00AB2B !default;
+$link-color-hover: #00AB2B !default;
+$link-color-visited: #00AB2B !default;
+$link-color-active: #00AB2B !default;
 
 // Main Section Colors
 $main-bg: #f8f8f8 !default;
